Added new actions to arts controller and fixed heading in arts#index

--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1 class="arts-index-header">LIST OF ARTWORKS</h1>
+<h1 class="arts-index-header">List Of Artworks</h1>
 <div class="container main">
   <div class="row inline">
 
