--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,8 +1,8 @@
 <h2>Add New Artwork</h2>
-<%= form_for @art, html: { multipart: true } do |f| %>
+<%= form_for @art do |f| %>
     <div>
       <%= f.label :image %>
-      <%= f.file_field :image %>
+      <%= f.text_field :image %>
     </div>
     <div>
       <%= f.label :title %>
