--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -4,12 +4,24 @@
   <div class="row inline">
 
       <% @arts.each do |art| %>
-        <%= art.image %>
-        <%= art.title %>
-        <%= art.artist %>
-        <%= art.year %>
-        <%= art.century %>
-        <%= art.medium %>
+        <div>
+         Image: <%= image_tag art.image, :class => "art-image-show" %>
+        </div>
+        <div>
+         Title: <%= art.title %>
+        </div>
+        <div>
+         Artist: <%= art.artist %><br>
+        </div>
+        <div>
+         Year: <%= art.year %><br>
+        </div>
+        <div>
+         Century: <%= art.century %><br>
+        </div>
+        <div>
+         Medium: <%= art.medium %><br>
+        </div>
       <br>
       <% end %>
       <br>
