Art edit controller and view works

--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -10,4 +10,4 @@
   <strong>Medium: </strong> <%= @art.medium %><br>
 
 
-<!-- <%=button_to "Delete", @art, method: :delete %> -->
+<!--- <%=button_to "Delete", @art, method: :delete %> -->
