--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -5,13 +5,11 @@
 
       <% @arts.each do |art| %>
         <div>
-         Image: <%= image_tag art.image, :class => "art-image-show" %>
+         <%= link_to image_tag art.image, :class => "art-image-show" %>
+         <%= link_to city_picture), city_path(city), class: "city-image img-responsive" %>
         </div>
         <div>
          Title: <%= art.title %>
-        </div>
-        <div>
-         Artist: <%= art.artist %><br>
         </div>
         <div>
          Year: <%= art.year %><br>
