--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -1,7 +1,10 @@
 <h2>Edit Artwork</h2>
 <%= form_for @art do |f| %>
     <div>
+
       <%= f.label :image %>
+    </div>
+    <div>
       <%= f.text_field :image %>
     </div>
     <div>
