--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -1,14 +1,23 @@
-<h2>Art Up Close</h2>
+<div class ="container">
+<div class="row">
+  <h2>Art Up Close</h2>
+</div>
 
-<div>
-  <div>
+<div class="row">
+  <div class="col-sm-6">
   <%= image_tag @art.image, :class => "art-image-show" %>
 </div>
-  <strong>Name: </strong> <%= @art.title %><br>
-  <strong>Artist: </strong> <%= @art.artist %><br>
-  <strong>Year: </strong> <%= @art.year %><br>
-  <strong>Century: </strong> <%= @art.century %><br>
-  <strong>Medium: </strong> <%= @art.medium %><br>
+  <div class="col-sm-6">
 
+    <strong>Name: </strong> <%= @art.title %><br>
+    <strong>Artist: </strong> <%= @art.artist %><br>
+    <strong>Year: </strong> <%= @art.year %><br>
+    <strong>Century: </strong> <%= @art.century %><br>
+    <strong>Medium: </strong> <%= @art.medium %><br>
 
-<%=button_to "Delete", @art, method: :delete %>
+    <%= link_to "Edit Artwork", edit_art_path, :class => "btn btn-info" %>
+
+    <%= button_to "Delete", @art, method: :delete, :class => "btn btn-danger" %>
+  </div>
+</div>
+<div class ="container">
