added bootswatch cyborg

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -15,4 +15,6 @@
  */
 
 @import "bootstrap-sprockets"
+@import "bootswatch/cyborg/variables"
 @import "bootstrap"
+@import "bootswatch/cyborg/bootswatch"
