--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Vagabond</a>
+          <a class="navbar-brand" href="/">Artbot</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="/cities">Cities</a></li>
+            <li><a href="/arts">Artworks</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li>
