--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -10,7 +10,7 @@
   <div class="col-sm-6">
 
     <strong>Name: </strong> <%= @art.title %><br>
-    <strong>Artist: </strong> <%= @art.artist %><br>
+    <strong>Artist: </strong> <%= @art.artist.name %><br>
     <strong>Year: </strong> <%= @art.year %><br>
     <strong>Century: </strong> <%= @art.century %><br>
     <strong>Medium: </strong> <%= @art.medium %><br>
