--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -12,8 +12,20 @@
       <%= f.text_field :title %>
     </div>
     <div>
+      <%= f.fields_for :artist do |a| %>
       <%= f.label :artist %>
-      <%= f.text_field :artist %>
+       <div class="artist_attrs">
+         <div>
+           <%= a.text_field :name %>
+         </div>
+         <div>
+           <%= a.text_field :birth %>
+         </div>
+         <div>
+           <%= a.text_field :death %>
+         </div>
+       </div>
+      <% end %>
     </div>
     <div>
       <%= f.label :year %>
