Adds updated arts#edit and arts#new form; Pending index and show fix for arts

--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -11,6 +11,9 @@
         <div>
          Title: <%=link_to art.title, art_path(art) %>
         </div>
+         Artist: <%= art.artist%>
+        <div>
+        </div>
         <div>
          Year: <%= art.year %><br>
         </div>
