--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -1,10 +1,7 @@
 <h2>Edit Artwork</h2>
 <%= form_for @art do |f| %>
     <div>
-
       <%= f.label :image %>
-    </div>
-    <div>
       <%= f.text_field :image %>
     </div>
     <div>
@@ -16,13 +13,20 @@
       <%= f.label :artist %>
        <div class="artist_attrs">
          <div>
+           <%= a.label :name %>
            <%= a.text_field :name %>
          </div>
          <div>
+           <%= a.label :birth %>
            <%= a.text_field :birth %>
          </div>
          <div>
+           <%= a.label :death %>
            <%= a.text_field :death %>
+         </div>
+         <div>
+           <%= a.label :nationality %>
+           <%= a.text_field :nationality %>
          </div>
        </div>
       <% end %>
