--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -10,13 +10,15 @@
   <div class="col-sm-6">
 
     <strong>Name: </strong> <%= @art.title %><br>
-    <strong>Artist: </strong> <%= @art.artist.name %><br>
+    <strong>Artist: </strong> <%= @art.artist %><br>
+
     <strong>Year: </strong> <%= @art.year %><br>
     <strong>Century: </strong> <%= @art.century %><br>
     <strong>Medium: </strong> <%= @art.medium %><br>
-
+    <br>
     <%= link_to "Edit Artwork", edit_art_path, :class => "btn btn-info" %>
-
+    <br>
+    <br>
     <%= button_to "Delete", @art, method: :delete, :class => "btn btn-danger" %>
   </div>
 </div>
