--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,20 +25,29 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
           <ul class="nav navbar-nav navbar-right">
-            <ul class="nav navbar-nav">
-              <li><a href="/arts">Artworks</a></li>
-            </ul>
+            <li><a href="/arts">Artworks</a></li>
             <li>
-                <% if current_admin %>
-                  <li><%= link_to "Profile", admin_path(current_admin) %></li>
-                  <li><%= link_to "Log Out", destroy_admin_session_path, method: :delete %></li>
-                <% else %>
-            </li>
-            <li>
-                <li><%= link_to "Sign Up", new_admin_registration_path %></li>
-                <li><%= link_to "Log In", new_admin_session_path %></li>
-            </li>
-            <% end %>
+              <% if current_admin %>
+                <li><%= link_to current_admin.username, admin_path(current_admin) %></li>
+                <li><%= link_to "Log Out", destroy_admin_session_path, method: :delete %></li>
+              <% else %>
+                </li>
+                  <li>
+                  <li><%= link_to "Sign Up", new_admin_registration_path %></li>
+                  <li><%= link_to "Log In", new_admin_session_path %></li>
+                </li>
+              <% end %>
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a href="#">Action</a></li>
+                  <li><a href="#">Another action</a></li>
+                  <li><a href="#">Something else here</a></li>
+                  <li role="separator" class="divider"></li>
+                  <li><a href="#">Separated link</a></li>
+                </ul>
+              </li>
+
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
