--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,17 +25,25 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="/arts">Artworks</a></li>
-            <li>
-              <% if current_admin %>
+            <% if !current_admin %>
+            <li><%= link_to "Artwork", arts_path %></li>
+            <% end %>
+            <% if current_admin %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Assets<span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Add Artwork", new_art_path %></li>
+                <li><%= link_to "Questions", questions_path %></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "Log Out", destroy_admin_session_path, method: :delete %></li>
+              </ul>
+            </li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     <%= current_admin.username %>
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Edit Profile", edit_admin_registration_path %></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
+                  <li><%= link_to "Preferences", edit_admin_registration_path %></li>
                   <li role="separator" class="divider"></li>
                   <li><%= link_to "Log Out", destroy_admin_session_path, method: :delete %></li>
                 </ul>
