--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,8 @@
 <% @questions.each do |question| %>
   <div>
+    <div>
+      <%= image_tag question.art.image, :class => "art-image-show" %>
+    </div>
     <strong>Question: </strong> <%= question.text %><br>
     <strong>Answer: </strong> <%= question.answer %><br>
     <%= link_to "Edit question", edit_art_question_path({:art_id => question.art, :id => question.id}), :class => "btn btn-info" %>
