Still working on form

--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -12,6 +12,9 @@
          <strong>Title:</strong> <%=link_to art.title, art_path(art) %>
         </div>
         <div>
+         <strong>Artist:</strong> <%= art.artist_id %>
+        </div>
+        <div>
          <strong>Year:</strong> <%= art.year %><br>
         </div>
         <div>
