--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -10,11 +10,11 @@
   <div class="col-sm-6">
 
     <strong>Name: </strong> <%= @art.title %><br>
-    <strong>Artist: </strong> <%= @art.artist.name %><br>
+    <strong>Artist: </strong> <%= @art.artist_id %><br>
     <strong>Year: </strong> <%= @art.year %><br>
     <strong>Century: </strong> <%= @art.century %><br>
     <strong>Medium: </strong> <%= @art.medium %><br>
-    
+
     <%= link_to "Edit Artwork", edit_art_path, :class => "btn btn-info" %>
 
     <%= button_to "Delete", @art, method: :delete, :class => "btn btn-danger" %>
