Arts new and arts show is now working

--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -12,7 +12,7 @@
          <strong>Title:</strong> <%=link_to art.title, art_path(art) %>
         </div>
         <div>
-         <strong>Artist:</strong> <%= art.artist_id %>
+         <strong>Artist:</strong> <%= art.artist.name %>
         </div>
         <div>
          <strong>Year:</strong> <%= art.year %><br>
