--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -9,8 +9,9 @@
 </div>
   <div class="col-sm-6">
 
-    <strong>Name: </strong> <%= @art.title %><br>
+    <strong>Title: </strong> &ldquo;<%= @art.title %>&rdquo;<br>
     <strong>Artist: </strong> <%= @art.artist.name %><br>
+    <strong>Nationality: </strong> <%= @art.artist.nationality %><br>
     <strong>Year: </strong> <%= @art.year %><br>
     <strong>Era: </strong> <%= @art.century %> century<br>
     <strong>Medium: </strong> <%= @art.medium %><br>
