Validations for user#new with flash error works

--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -1,4 +1,11 @@
 <h2>Add New Artwork</h2>
+
+<% if flash[:error] %>
+  <div class="alert alert-warning" role="alert">
+    <%= flash[:error] %>
+  </div>
+<% end %>
+
 <%= form_for @art do |f| %>
     <div>
       <%= f.label :image %>
