--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -26,6 +26,9 @@
     <%= link_to "Edit Artwork", edit_art_path, :class => "btn btn-info" %>
 
     <%= button_to "Delete", @art, method: :delete, :class => "btn btn-danger" %>
+
+    <%= link_to "Add Question", new_art_question_path(@art, @question), :class => "btn btn-default" %>
+
   </div>
 </div>
 <div class ="container">
