--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,8 +35,11 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Assets<span class="caret"></span></a>
               <ul class="dropdown-menu">
+                <li><%= link_to "See Artworks", arts_path %></li>
+                <li><%= link_to "See Questions", questions_path %></li>
+                <li role="separator" class="divider"></li>
                 <li><%= link_to "Add Artwork", new_art_path %></li>
-                <li><%= link_to "Questions", questions_path %></li>
+                <li><%= link_to "Add Artist", new_artist_path %></li>
               </ul>
             </li>
               <li class="dropdown">
@@ -44,7 +47,7 @@
                     <%= current_admin.username %>
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Preferences", edit_admin_registration_path %></li>
+                  <li><%= link_to "Edit Account", edit_admin_registration_path %></li>
                   <li role="separator" class="divider"></li>
                   <li><%= link_to "Log Out", destroy_admin_session_path, method: :delete %></li>
                 </ul>
