--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -62,7 +62,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-  <div class="container">
+  <div class="container <%= controller_name %>_<%= action_name %>">
     <div>
       <% flash.each do |key, value| %>
         <div class="alert alert-<%= key %>"><%= value %></div>
