Adds dismissible to flash and changes flash conditio in delete artwork

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -65,7 +65,14 @@
   <div class="container <%= controller_name %>_<%= action_name %>">
     <div>
       <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value %></div>
+        <div class="alert alert-dismissible alert-<%= key %>">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+
+          <%= value %>
+​
+        </div>
       <% end %>
     </div>
 
