image is responsive and displaying nicely

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -23,6 +23,7 @@ body
   padding-top: 60px
 
 .arts_show
-  .col-md-10
-    max-height: 800px
-    max-width: 1600px
+
+.show_image
+  max-width: 100%
+  max-height: 100%
