--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -6,12 +6,12 @@
 <% end %>
 
 <div class ="container-fluid">
-  <div class="row-fluid">
+  <div class="row">
     <h3>&ldquo;<%= @art.title %>,&rdquo; by <%= @art.artist.name %> (<%= @art.artist.birth %>–<%= @art.artist.death %>)</h3>
   </div>
-  <div class="row-fluid">
+  <div class="row show_image">
     <div class="col-md-10">
-      <%= image_tag @art.image %>
+      <%= image_tag @art.image, class: "show_image" %>
     </div>
     <div class="col-md-2">
       The <%= @art.medium %> <strong>&ldquo;<%= @art.title %>&rdquo;</strong> was created in <strong><%= @art.year %></strong> by the <%= @art.artist.nationality %> artist <strong><%= @art.artist.name %></strong>.
