--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -23,7 +23,8 @@ body
   padding-top: 60px
 
 .arts_show
-
-.show_image
-  max-width: 100%
-  max-height: 100%
+  .show_image
+    max-width: 100%
+    max-height: 100%
+  .icon_group
+    display: inline
