made arts index images thumbs again, simplified img css

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -21,13 +21,15 @@
 
 body
   padding-top: 60px
-
+.arts_index
+  .thumbs
+    max-height: 300px
+    max-width: 300px
 .alert-error
   color: white
   background-color: red
-
 .arts_show
-  .show_image
+  img
     max-width: 100%
     max-height: 100%
   .icon_group
