--- a/app/views/arts/index.html.erb
+++ b/app/views/arts/index.html.erb
@@ -5,7 +5,7 @@
 
       <% @arts.each do |art| %>
         <div>
-         <%= link_to image_tag(art.image, :class => "art-image-show"), art_path(art) %>
+         <%= link_to image_tag(art.image, :class => "thumbs"), art_path(art) %>
         </div>
         <div>
          <strong>Title:</strong> &ldquo;<%= art.title %>&rdquo;
