--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -28,6 +28,6 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <%= image_tag @art.image, class: "show_image" %>
+      <%= image_tag @art.image %>
     </div>
   </div>
