--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -19,18 +19,24 @@
 @import "bootstrap"
 @import "bootswatch/cyborg/bootswatch"
 
+// GLOBAL
 body
   padding-top: 60px
+
+.alert-error
+  color: white
+  background-color: red
+
+// ARTS
 .arts_index
   .thumbs
     max-height: 300px
     max-width: 300px
-.alert-error
-  color: white
-  background-color: red
 .arts_show
   img
     max-width: 100%
     max-height: 100%
   .icon_group
     display: inline
+
+// QUESTIONS
