hid buttons from non-admins on arts show page

--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -11,20 +11,21 @@
     <span>
       <h3>&ldquo;<%= @art.title %>,&rdquo; by <%= @art.artist.name %> (<%= @art.artist.birth %>–<%= @art.artist.death %>)</h3>
     </span>
+    <% if current_admin %>
+      <div class="icon_group">
+        <%= link_to edit_art_path, :class => "btn btn-default" do%>
+          <span class="glyphicon glyphicon-pencil"></span>
+        <% end %>
+        <%= link_to @art, method: :delete, :class => "btn btn-default" do %>
+          <span class="glyphicon glyphicon-trash"></span>
+        <% end %>
+        <%= link_to new_art_question_path(@art, @question), :class => "btn btn-default" do%>
+          <span class="glyphicon glyphicon-plus"></span>
+          <span class="glyphicon glyphicon-question-sign"></span>
+        <% end %>
+      </div>
+    <% end %>
 
-    <div class="icon_group">
-      <%= link_to edit_art_path, :class => "btn btn-default" do%>
-        <span class="glyphicon glyphicon-pencil"></span>
-      <% end %>
-      <%= link_to @art, method: :delete, :class => "btn btn-default" do %>
-        <span class="glyphicon glyphicon-trash"></span>
-      <% end %>
-      <%= link_to new_art_question_path(@art, @question), :class => "btn btn-default" do%>
-        <span class="glyphicon glyphicon-plus"></span>
-        <span class="glyphicon glyphicon-question-sign"></span>
-
-      <% end %>
-    </div>
   </div>
   <div class="row">
     <div class="col-md-12">
