--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -33,6 +33,6 @@
   </div>
 
   <div class="twitter-button">
-    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://https://slack-artbot.herokuapp.com/" data-via="maanna" data-size="large" data-hashtags="artbot,slack,generalassembly-sf,wdi28,">Tweet</a>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://https://slack-artbot.herokuapp.com/" data-size="large" data-hashtags="artbot,slack,bots,">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </div>
