--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,13 +1,22 @@
+
 <% @questions.each do |question| %>
-  <div>
-    <div>
-      <%= image_tag question.art.image, :class => "art-image-show" %>
-    </div>
-    <strong>Question: </strong> <%= question.text %><br>
-    <strong>Answer: </strong> <%= question.answer %><br>
-    <br>
-    <%= link_to "Edit question", edit_art_question_path({:art_id => question.art, :id => question.id}), :class => "btn btn-info" %>
+  <hr />
+  <div class="row">
+      <div class="col-md-2">
+        <h4><%= image_tag question.art.image %>
+      </div>
+      <div class="col-md-9">
+        <h3><%= question.text %></h3>
+        <h5><%= question.answer %></h5>
+      </div>
+      <div class="col-md-1">
+        <%= link_to edit_art_question_path({:art_id => question.art, :id => question.id}), :class => "btn btn-primary" do%>
+        <span class="glyphicon glyphicon-pencil"></span>
+        <% end %>
+        <%= link_to art_question_path({:art_id => question.art, :id => question.id}), method: :delete, :class => "btn btn-warning" do%>
+        <span class="glyphicon glyphicon-trash"></span>
+        <% end %>
+      </div>
   </div>
-  <br>
-  <br>
 <% end %>
+<hr />
