twitter cards and twitter button are getting along

--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -41,6 +41,6 @@
   </div>
 
   <div class="twitter-button">
-    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://https://slack-artbot.herokuapp.com/" data-text="I found this from Artbot" data-size="large">Tweet</a>
+    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://slack-artbot.herokuapp.com<%= art_path(@art) %>" data-text="I found this on Artbot!" data-size="large">Tweet</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </div>
