--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -17,7 +17,7 @@
     <%= f.label :nationality %>
     <%= f.text_field :nationality, class:"form-control" %>
   </div>
-  <div>
+  <div class="submit_button">
     <%= f.submit "Add Artist", :class => "btn btn-success" %>
   </div>
 <% end %>
