--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -14,33 +14,32 @@
 <% end %>
 
   <div >
-
-
     <span>
       <h3>&ldquo;<%= @art.title %>,&rdquo; by <%= @art.artist.name %> (<%= @art.artist.birth %>–<%= @art.artist.death %>)</h3>
     </span>
 
-    <div class="icon_group">
-      <%= link_to edit_art_path, :class => "btn btn-default" do%>
-        <span class="glyphicon glyphicon-pencil"></span>
-      <% end %>
-      <%= link_to @art, method: :delete, :class => "btn btn-default" do %>
-        <span class="glyphicon glyphicon-trash"></span>
-      <% end %>
-      <%= link_to new_art_question_path(@art, @question), :class => "btn btn-default" do%>
-        <span class="glyphicon glyphicon-plus"></span>
-        <span class="glyphicon glyphicon-question-sign"></span>
-
-      <% end %>
+    <div class="twitter-button pull-right">
+      <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://slack-artbot.herokuapp.com<%= art_path(@art) %>" data-text="I found this on Artbot!" data-size="large">Tweet</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
     </div>
+
+    <% if current_admin %>
+      <div class="icon_group">
+        <%= link_to edit_art_path, :class => "btn btn-default" do%>
+          <span class="glyphicon glyphicon-pencil"></span>
+        <% end %>
+        <%= link_to @art, method: :delete, :class => "btn btn-default" do %>
+          <span class="glyphicon glyphicon-trash"></span>
+        <% end %>
+        <%= link_to new_art_question_path(@art, @question), :class => "btn btn-default" do%>
+          <span class="glyphicon glyphicon-plus"></span>
+          <span class="glyphicon glyphicon-question-sign"></span>
+        <% end %>
+      </div>
+    <% end %>
   </div>
   <div class="row">
     <div class="col-md-12">
       <%= image_tag @art.image %>
     </div>
-  </div>
-
-  <div class="twitter-button">
-    <a href="https://twitter.com/share" class="twitter-share-button" data-url="https://slack-artbot.herokuapp.com<%= art_path(@art) %>" data-text="I found this on Artbot!" data-size="large">Tweet</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </div>
