Added form-control for arts#new, styled button and fixing spacing

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -42,6 +42,9 @@ body
     display: inline
   .twitter-button
     margin-top: 20px
+.new_art
+  .submit_button
+    margin-top: 20px
 
 // QUESTIONS
 .questions_index
