--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -23,7 +23,7 @@
       <%= f.label :medium %>
       <%= f.text_field :medium, class:"form-control" %>
     </div>
-    <div>
-      <%= f.submit "Save Art" %>
+    <div class="submit_button">
+      <%= f.submit "Save Art", class: "btn btn-success"  %>
     </div>
   <% end %>
