Adds button spacing

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -45,6 +45,10 @@ body
 .new_art
   .submit_button
     margin-top: 20px
+.edit_art
+  .submit_button
+    margin-top: 20px
+
 
 // QUESTIONS
 .questions_index
