--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,17 +1,19 @@
+<h2>Add A Question</h2>
+
 <%= form_for [@art, @question], url: art_questions_path do |f| %>
   <div>
     <%= f.label :text, "Question" %>
   </div>
   <div>
-    <%= f.text_area :text %>
+    <%= f.text_area :text, class:"form-control" %>
   </div>
   <div>
     <%= f.label :answer %>
   </div>
   <div>
-    <%= f.text_area :answer %>
+    <%= f.text_area :answer, class:"form-control" %>
   </div>
-  <div>
-    <%= f.submit "Save new question" %>
+  <div class="submit_button">
+    <%= f.submit "Save new question", class: "btn btn-success" %>
   </div>
 <% end %>
