Adds css and bootstrap button saved

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -55,6 +55,10 @@ body
   img
     max-height: 110px
     max-width: 110px
+.new_question
+  .submit_button
+    margin-top: 20px
+
 
 // ARTISTS
 .artists_new
