--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -14,6 +14,6 @@
     <%= f.text_area :answer, class:"form-control" %>
   </div>
   <div class="submit_button">
-    <%= f.submit "Save new question", class: "btn btn-success" %>
+    <%= f.submit "Save New Question", class: "btn btn-success" %>
   </div>
 <% end %>
