--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,18 +1,19 @@
+<h2>Edit A Question</h2>
+
 <%= form_for [@question.art, @question], url: art_question_path do |f| %>
   <div>
     <%= f.label :text, "Question" %>
   </div>
   <div>
-    <%= f.text_area :text %>
+    <%= f.text_area :text, class:"form-control" %>
   </div>
   <div>
     <%= f.label :answer %>
   </div>
   <div>
-    <%= f.text_area :answer %>
+    <%= f.text_area :answer, class:"form-control"%>
   </div>
-  <div>
-    <%= f.submit "Save edits" %>
-
+  <div class="submit_button">
+    <%= f.submit "Save Question", class: "btn btn-success" %>
   </div>
 <% end %>
