Added spacing for button

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -58,6 +58,9 @@ body
 .new_question
   .submit_button
     margin-top: 20px
+.edit_question
+  .submit_button
+    margin-top: 20px
 
 
 // ARTISTS
