Makes submit-button global, drier code

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -27,7 +27,10 @@ body
   color: white
   background-color: red
 
-// ARTS
+.submit_button
+  margin-top: 20px
+
+ARTS
 .arts_index
   .thumbs
     max-height: 300px
@@ -42,28 +45,13 @@ body
     display: inline
   .twitter-button
     margin-top: 20px
-.new_art
-  .submit_button
-    margin-top: 20px
-.edit_art
-  .submit_button
-    margin-top: 20px
-
 
 // QUESTIONS
 .questions_index
   img
     max-height: 110px
     max-width: 110px
-.new_question
-  .submit_button
-    margin-top: 20px
-.edit_question
-  .submit_button
-    margin-top: 20px
+
 
 
 // ARTISTS
-.artists_new
-  .submit_button
-    margin-top: 20px
