--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -29,9 +29,13 @@ body
 
 // ARTS
 .arts_index
-  .thumbs
-    max-height: 300px
-    max-width: 300px
+  img
+    max-width: 100%
+    max-height: 100%
+  .body-content
+    padding: 10px
+
+
 .arts_show
   img
     max-width: 100%
