splash page has gif and new description

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <div class="jumbotron" id="artbot-and-slack">
   <div class="container-index">
-    <h1 class="site-title">Artbot</h1>
-    <p class="lead">Art me</p>
+    <h3 class="site-title">Artbot</h3>
+    <p class="lead"> is a chatbot that delivers art into Slack.</p>
+    <%= image_tag "demo.gif", class: "img-responsive" %>
   </div>
 </div>
