--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -32,8 +32,8 @@ body
   img
     max-width: 100%
     max-height: 100%
-  .body-content
-    padding: 10px
+  .list-group-item-text
+    font-size: 20px
 
 
 .arts_show
