--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Artbot</title>
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <% if content_for? :meta_og %>
     <%= yield :meta_og %>
   <% end %>
