--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -16,7 +16,7 @@
 
   <div >
     <span>
-      <h3>&ldquo;<%= @art.title %>,&rdquo; by <%= @art.artist.name %> (<%= @art.artist.birth %>–<%= @art.artist.death %>)</h3>
+      <h3>&ldquo;<%= @art.title %>&rdquo; by <%= @art.artist.name %> (<%= @art.artist.birth %>–<%= @art.artist.death %>)</h3>
     </span>
 
     <div class="twitter-button pull-right">
