standardized button style

--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -18,6 +18,6 @@
     <%= f.text_field :nationality, class:"form-control" %>
   </div>
   <div class="submit_button">
-    <%= f.submit "Add Artist", :class => "btn btn-success" %>
+    <%= f.submit "Add Artist", :class => "btn btn-default" %>
   </div>
 <% end %>
