--- a/app/views/arts/edit.html.erb
+++ b/app/views/arts/edit.html.erb
@@ -24,6 +24,6 @@
       <%= f.text_field :medium, class:"form-control" %>
     </div>
     <div class="submit_button">
-      <%= f.submit "Save Art", class: "btn btn-success"  %>
+      <%= f.submit "Save Art", class: "btn btn-default"  %>
     </div>
   <% end %>
