--- a/app/views/arts/new.html.erb
+++ b/app/views/arts/new.html.erb
@@ -28,6 +28,6 @@
       <%= f.text_field :medium, class:"form-control" %>
     </div>
     <div class="submit_button">
-      <%= f.submit "Save Art", class: "btn btn-success" %>
+      <%= f.submit "Save Art", class: "btn btn-default" %>
     </div>
   <% end %>
