--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -10,10 +10,10 @@
         <h5><%= question.answer %></h5>
       </div>
       <div class="col-md-1">
-        <%= link_to edit_art_question_path({:art_id => question.art, :id => question.id}), :class => "btn btn-primary" do%>
+        <%= link_to edit_art_question_path({:art_id => question.art, :id => question.id}), :class => "btn btn-default" do%>
         <span class="glyphicon glyphicon-pencil"></span>
         <% end %>
-        <%= link_to art_question_path({:art_id => question.art, :id => question.id}), method: :delete, :class => "btn btn-warning" do%>
+        <%= link_to art_question_path({:art_id => question.art, :id => question.id}), method: :delete, :class => "btn btn-default" do%>
         <span class="glyphicon glyphicon-trash"></span>
         <% end %>
       </div>
