--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,11 +43,11 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Assets<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><%= link_to "See Artworks", arts_path %></li>
-                <li><%= link_to "See Questions", questions_path %></li>
+                <li><%= link_to "All artwork", arts_path %></li>
+                <li><%= link_to "All questions", questions_path %></li>
                 <li role="separator" class="divider"></li>
-                <li><%= link_to "Add Artwork", new_art_path %></li>
-                <li><%= link_to "Add Artist", new_artist_path %></li>
+                <li><%= link_to "Add a new artwork", new_art_path %></li>
+                <li><%= link_to "Add a new artist", new_artist_path %></li>
               </ul>
             </li>
               <li class="dropdown">
