fixed a few stray caps and deleted an unncessary header

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,9 +55,9 @@
                     <%= current_admin.username %>
                   <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                  <li><%= link_to "Edit Account", edit_admin_registration_path %></li>
+                  <li><%= link_to "Edit account", edit_admin_registration_path %></li>
                   <li role="separator" class="divider"></li>
-                  <li><%= link_to "Log Out", destroy_admin_session_path, method: :delete %></li>
+                  <li><%= link_to "Log out", destroy_admin_session_path, method: :delete %></li>
                 </ul>
               </li>
               <% else %>
