polished flash messages, changed notice message color

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -27,6 +27,10 @@ body
   color: white
   background-color: red
 
+.alert-success
+  color: white
+  background-color: blue
+
 .submit_button
   margin-top: 20px
 
