--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,8 +61,8 @@
                 </ul>
               </li>
               <% else %>
-                <li><%= link_to "Sign Up", new_admin_registration_path %></li>
-                <li><%= link_to "Log In", new_admin_session_path %></li>
+                <li><%= link_to "Sign up", new_admin_registration_path %></li>
+                <li><%= link_to "Log in", new_admin_session_path %></li>
               <% end %>
 
           </ul>
