splash header is bigger and with color

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,6 @@
 <div class="jumbotron" id="artbot-and-slack">
   <div class="container-index">
-    <h3 class="site-title">Artbot</h3>
-    <p class="lead"> is a chatbot that delivers art into Slack.</p>
+    <h2 class="site-title"><span>Artbot</span> is a chatbot that sends you art in Slack.</h2>
     <%= image_tag "demo.gif", class: "img-responsive" %>
   </div>
 </div>
