--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron" id="artbot-and-slack">
   <div class="container-index">
-    <h2 class="site-title"><span>Artbot</span> is a chatbot that sends you art in Slack.</h2>
+    <h2 class="site-title"><span>Artbot</span> is a chatbot that delivers art to Slack.</h2>
     <%= image_tag "demo.gif", class: "img-responsive" %>
   </div>
 </div>
