--- a/app/views/arts/show.html.erb
+++ b/app/views/arts/show.html.erb
@@ -29,7 +29,7 @@
         <%= link_to edit_art_path, :class => "btn btn-default" do%>
           <span class="glyphicon glyphicon-pencil"></span>
         <% end %>
-        <%= link_to @art, method: :delete, :class => "btn btn-default" do %>
+        <%= link_to @art,title: "Delete \"#{@art.title.truncate(30)}\"?", data: { confirm: "Are you sure?\n\nYou are about to delete \"#{@art.title}\" by #{@art.artist.name}." }, method: :delete, :class => "btn btn-default" do %>
           <span class="glyphicon glyphicon-trash"></span>
         <% end %>
         <%= link_to new_art_question_path(@art, @question), :class => "btn btn-default" do%>
