--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,5 +87,18 @@
     <%= yield %>
 
   </div>
+
+  <div class="bottom text-center">
+    <div class="footer">
+      <a target="_blank" href="https://github.com/mbd-s/artbot"><img id="github-link" src="https://cdn4.iconfinder.com/data/icons/iconsimple-logotypes/512/github-512.png"></a>
+      <p class="text-center">
+        <a target="_blank" href="https://github.com/morgansharif">Morgan Sharif</a>  |
+        <a target="_blank" href="https://github.com/mbd-s">Michael Silverberg</a>  |
+        <a target="_blank" href="https://github.com/cloverharvest">Anna Schwab</a>  |
+        <a target="_blank" href="https://github.com/jtam11">Justin Tam</a>
+      </p>
+    </div>
+  </div>
+
 </body>
 </html>
